CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(VGTOOLS)

FIND_PACKAGE(HDF5)
FIND_PACKAGE(MPI)

SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11")

INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${MPI_CXX_INCLUDE_PATH})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

SET(HDF5LIBS "${HDF5_LIBRARIES}" "${MPI_CXX_LIBRARIES}")

ADD_LIBRARY(common "uhdf5.cpp")
ADD_EXECUTABLE(t_uhdf5 "t_uhdf5.cpp")
TARGET_LINK_LIBRARIES(t_uhdf5 common ${HDF5LIBS})
