CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(UHDF5)

FIND_PACKAGE(HDF5)
IF (HDF5_IS_PARALLEL)
    FIND_PACKAGE(MPI)
ENDIF()

INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIRS})
IF (HDF5_IS_PARALLEL)
    INCLUDE_DIRECTORIES (${MPI_CXX_INCLUDE_PATH})
    SET(HDF5LIBS "${HDF5_LIBRARIES}" "${MPI_CXX_LIBRARIES}")
ELSE()
    SET(HDF5LIBS "${HDF5_LIBRARIES}")
ENDIF()

SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11")

INCLUDE_DIRECTORIES (${HDF5_INCLUDE_DIRS})
INCLUDE_DIRECTORIES (${MPI_CXX_INCLUDE_PATH})

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}")

ADD_SUBDIRECTORY(tests)